--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,11 @@
     "elysia-helmet": "^1.0.1"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "bun-types": "latest",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1"
   },
   "module": "src/index.js"
 }
