--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@bogeychan/elysia-logger": "^0.0.15",
     "@elysiajs/swagger": "^0.8.0",
     "elysia": "latest",
-    "elysia-helmet": "^1.0.1"
+    "elysia-helmet": "^1.0.1",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
+    "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "bun-types": "latest",
